<resources>
    <string name="app_name">Prak3_3103</string>
    <string name="app_reg">Register</string>
    <string name="app_login">Login</string>
    <string name="app_usn">Username</string>
    <string name="app_pw">Password</string>
    <string name="app_konfirm">Konfirmasi Password</string>
    <string name="app_isiankonfirm">Konfirmasi password</string>
    <string name="app_inptusn">Masukkan username</string>
    <string name="app_inptpw">Masukkan password</string>
    <string name="btn_login">Login</string>
    <string name="btn_daftar">Daftar</string>
    <string name="app_kel">Jenis Kelamin</string>
    <string name="kel1">Laki-laki</string>
    <string name="kel2">Perempuan</string>
    <string name="ketentuan">Saya setuju dengan Syarat dan Ketentuan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_domisili">Domisili</string>
    <string-array name="daftar_kota">
        <item>Yogyakarta</item>
        <item>Jakarta</item>
        <item>Surabaya</item>
        <item>Bandung</item>
    </string-array>
</resources>